--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: apply
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -32,7 +33,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Step named as job
         run: echo "I share a name with the job"
-        id: build
+        id: apply
         
       - name: Another Random step
         run: echo hello world
