--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Step named as job
+      - name: Step named as the job environment 
         run: echo "I share a name with the job"
         id: apply
         
